2006-12-04  Jesus M. Gonzalez-Barahona <jgb@gsyc.escet.urjc.es>

	* main.py:
	    - New options for generations analysis
	    - New option for specifying folder for analysis output data
	* generations.py: new file for performing generations analysis
	
2006-12-02  Jesus M. Gonzalez-Barahona <jgb@gsyc.escet.urjc.es>

	* main.py:
	    - New call interface (now options have to be named)
	    - Messages and interface now should be in sync
	* database.py
	    - Support for empty passwd
	
2006-10-20  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* repository.py:
	    - New way for storing data without having to
	      waint until the process ends.
	    - Don't store commiters-module. We can obtain 
	      it later with a simple query.
	* commit.py: commit2sql function no longer needed.
	* file.py: file2sql function no longer needed.
	* directories.py: new implementation with absolute path.
	* main.py: new flag in order to indicate type of repository.

2006-07-11  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* repository.py: fixed bug in files table

2006-06-23  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* intermediate.py: intermediate tables algorithm
	* modrequest.py: new file added
	* cvsanaly-web: web engine added

2006-06-20  Alvaro Navarro 	<anavarro@gsyc.escet.urjc.es>

	* new version from scratch
	* INSTALL: new file added
	* pycvsanaly: renamed directory
	* wizard.py: removed automatic creating of database
	* file.py: new class that stores file info
	* commiter.py: new class that stores commiters
	* commit.py: new class that stores commit log
	* directory.py: new class that stores directories (now modules)
	* database.py: SQL wrapper
	* connection.py: framework in order to create connections
	* tables.py: dictionary format for tables

2005-09-15 Alvaro Navarro	<anavarro@gsyc.escet.urjc.es>

	* db.py, cvsanal_log, cvsanal_file_log2sql: fixed bug. modules with
	blank space crashed mysql_server.

2005-07-26 Alvaro Navarro	<anavarro@gsyc.escet.urjc.es>
